--- a/EMS-backend/src/main/resources/application.properties
+++ b/EMS-backend/src/main/resources/application.properties
@@ -26,7 +26,13 @@ spring.mail.properties.mail.smtp.ssl.trust=${MAIL_HOST:smtp.gmail.com}
 
 # Server Configuration
 server.port=${SERVER_PORT:8080}
-server.servlet.context-path=/api
+server.servlet.context-path=/
+
+# Frontend Configuration
+app.frontend.url=http://192.168.58.1:8080
+
+# Password Reset Configuration
+app.password-reset.token-expiration-minutes=15
 
 # Logging
 logging.level.com.example.EMS_backend=${LOG_LEVEL:INFO}
