--- a/EMS-backend/src/main/resources/application.properties
+++ b/EMS-backend/src/main/resources/application.properties
@@ -1,11 +1,39 @@
-spring.application.name=EMS-backend
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
-
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://ep-nameless-darkness-ah2fb9xr-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require}
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_UWSLM18qvIlc
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Optional: Hibernate settings
+
+# JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# JWT Configuration
+ems.app.jwtSecret=${JWT_SECRET:emsSecretKeyForJWTTokenGeneration}
+ems.app.jwtExpirationMs=${JWT_EXPIRATION:900000}
+ems.app.jwtRefreshExpirationMs=${JWT_REFRESH_EXPIRATION:604800000}
+
+# Mail Configuration
+spring.mail.host=${MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=${MAIL_USERNAME:marwanam980@gmail.com}
+spring.mail.password=zcwu xfha gdtq rbfc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=${MAIL_HOST:smtp.gmail.com}
+
+# Server Configuration
+server.port=${SERVER_PORT:8080}
+server.servlet.context-path=/
+
+# Frontend Configuration
+app.frontend.url=http://192.168.58.1:8080
+
+# Password Reset Configuration
+app.password-reset.token-expiration-minutes=15
+
+# Logging
+logging.level.com.example.EMS_backend=${LOG_LEVEL:INFO}
+logging.level.org.springframework.security=${SECURITY_LOG_LEVEL:INFO}
