--- a/EMS-backend/pom.xml
+++ b/EMS-backend/pom.xml
@@ -117,6 +117,13 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <!-- SpringDoc OpenAPI for Swagger documentation -->
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+      <version>2.2.0</version>
+    </dependency>
   </dependencies>
 
 	<build>
