--- a/EMS-backend/src/main/resources/application.properties
+++ b/EMS-backend/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://ep-nameless-darkness-ah2fb9xr-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://ep-nameless-darkness-ah2fb9xr-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&prepareThreshold=0}
 spring.datasource.username=neondb_owner
 spring.datasource.password=npg_UWSLM18qvIlc
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # JWT Configuration
